--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: > # your text below (remove <br> elements if you don't need line br
     - Fusion 360
     - Materialize Magics
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/italocjs/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
