--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Doe # your name (or website title) here
+title: Italo C J Soares # your name (or website title) here
 logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi, welcome to my github, here you can find some of the projects i've been working  
