--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,14 @@
 title: Italo C J Soares # your name (or website title) here
 logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hi, welcome to my github, here you can find some of the projects i've been working  
-  Skills:
-  * Programming: 
-    * C++ for microcontrollers
-      *PIC, ATMEL, Expressif, Raspberry
-    * Python
-      * OpenCV
-      * RPA, PyAutoGui
-      * ArcGIS / PowerBI
-  * 3D Modelling:
-    * Solidworks
-    * Fusion 360
-    * Materialize Magics
-  <a href="https://www.linkedin.com/in/italocjs/">View My LinkedIn Profile</a> 
-  
+   <p align="center">
+  <a href="https://www.linkedin.com/in/italocjs/">LinkedIn</a> |    
+  <a href="https://github.com/italocjs">GitHub</a>
+  </p>
+  <br>
+  <p align="justify">Welcome to my github, i'm a product developer fascinated by data science, machine learning and computer vision. 
+  <br>
+  2 linha - todo. 
+  </p>  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
