--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Italo C J Soares # your name (or website title) here
+title: <p align="center">Italo Soares</p> # your name (or website title) here
 logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
    <p align="center">
