--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-title: <p align="center">Italo Soares</p> # your name (or website title) here
-logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-   <p align="center">
-  <a href="https://www.linkedin.com/in/italocjs/">LinkedIn</a> |    
-  <a href="https://github.com/italocjs">GitHub</a>
+title: <p align="center">italoe</p> # your name (or website title) here 
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
+description: > # your text below (remove <br> elements if you don't need line breaks) 
+  <p align="center">
+  <a href="https://www.linkedin.com/in/jdsdsdsdsdsds/">LinkedIn</a> |    
+  <a href="/pdf/Jessie%20Le_Resume.pdf">Resume</a> | 
+  <a href="https://github.com/jessidsdsdsle">GitHub</a>
   </p>
   <br>
-  <p align="justify">Welcome to my github, i'm a product developer fascinated by data science, machine learning and computer vision. 
+  <p align="justify">I am currdsdsdsdselphia. 
   <br>
-  2 linha - todo. 
-  </p>  
+  My specialidsdsdsied to fdsdsdscturing. 
+  </p>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
