--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: <p align="center">italoe</p> # your name (or website title) here 
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: <p align="center">Italo Soares</p> # your name (or website title) here 
+logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks) 
   <p align="center">
-  <a href="https://www.linkedin.com/in/jdsdsdsdsdsds/">LinkedIn</a> |    
+  <a href="https://www.linkedin.com/in/italocjs/">LinkedIn</a> |    
   <a href="/pdf/Jessie%20Le_Resume.pdf">Resume</a> | 
-  <a href="https://github.com/jessidsdsdsle">GitHub</a>
+  <a href="https://github.com/italocjs">GitHub</a>
   </p>
   <br>
-  <p align="justify">I am currdsdsdsdselphia. 
+  <p align="justify">Welcome to my github, i am a product developer fascinated by data science, machine learning and computer vision. 
   <br>
-  My specialidsdsdsied to fdsdsdscturing. 
+  TODO. 
   </p>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
