--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,16 @@ logo: "/images/italo_round.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks) 
   <p align="center">
   <a href="https://www.linkedin.com/in/italocjs/">LinkedIn</a> |    
-  <a href="/pdf/Jessie%20Le_Resume.pdf">Resume</a> | 
+#  <a href="/pdf/Jessie%20Le_Resume.pdf">Resume</a> | 
   <a href="https://github.com/italocjs">GitHub</a>
   </p>
   <br>
-  <p align="justify">Welcome to my github, i am a product developer fascinated by data science, machine learning and computer vision. 
+  <p align="justify">Welcome to my portfolio page, i am a product developer, with experience in programming for microcontrollers, 3D Modelling and 3D printing. 
   <br>
-  TODO. 
   </p>
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
