--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <p align="justify">Welcome to my portfolio page, i am a product developer, with experience in programming for microcontrollers, 3D Modelling and 3D printing. 
   <br>
   </p>
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
 
 remote_theme: pages-themes/cayman@v0.2.0
