--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: [Italo Soares portfolio]
-description: [Welcome to my portfolio page, i am a product developer, with experience in programming for microcontrollers, 3D Modelling and 3D printing]
+title: "Italo Soares portfolio"
+description: "Welcome to my portfolio page, i am a product developer, with experience in programming for microcontrollers, 3D Modelling and 3D printing"
 theme: jekyll-theme-architect
 show_downloads: false
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
